# nhai-road-viz

./: .gitignore  INSTALL.txt  README.md  deploy.bat  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  start_server.py
data/: Comparison Delhi Vadodara Pkg 9 (Road Signage).xlsx -  Comparison with CA@100m.csv  data.db  data_server.py  ingest_data_from_csv.py  ingest_data_from_video.py
public/: manifest.json  sw.js
src/: App.css  App.tsx  Map.tsx  Path.tsx  config.ts  index.css  main.tsx
src/components/: ChainageInfo.tsx  ChainageInfoNew.tsx  CoordinateDisplay.tsx  InfoText.tsx  LaneAnalysisTable.tsx  QualityLegend.tsx  VehiclePathAnalysis.tsx  VideoPlayer.tsx  index.ts  types.ts  utils.ts
src/mobile/: LeafletBottomSheet.tsx  MobileView.css  MobileView.tsx
