[project]
name = "map-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
